{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 27,
  "lineage": "eb160675-5f91-5e9a-d1ca-832c9c0effd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b300d4677ee3495",
            "arn": "arn:aws:ec2:us-east-1:471112601493:elastic-ip/eipalloc-04b300d4677ee3495",
            "association_id": "eipassoc-02c7fc15cbfd7ffdf",
            "domain": "vpc",
            "id": "eipalloc-04b300d4677ee3495",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e7c8a283622cb564",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-23-21-173-85.compute-1.amazonaws.com",
            "public_ip": "23.21.173.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:internet-gateway/igw-0a24d954a26067d50",
            "id": "igw-0a24d954a26067d50",
            "owner_id": "471112601493",
            "tags": {
              "Name": "Test IGW"
            },
            "tags_all": {
              "Name": "Test IGW"
            },
            "vpc_id": "vpc-07924258d56611f30"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b300d4677ee3495",
            "association_id": "eipassoc-02c7fc15cbfd7ffdf",
            "connectivity_type": "public",
            "id": "nat-0a9849e411356dad3",
            "network_interface_id": "eni-0e7c8a283622cb564",
            "private_ip": "10.0.1.93",
            "public_ip": "23.21.173.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aeb961ee94ac3c5c",
            "tags": {
              "Name": "Nat Gateway"
            },
            "tags_all": {
              "Name": "Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_subnet.public-webtier-subnet-1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:route-table/rtb-07e72bc42f44c879c",
            "id": "rtb-07e72bc42f44c879c",
            "owner_id": "471112601493",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9849e411356dad3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-test-Private Route Table"
            },
            "tags_all": {
              "Name": "vpc-test-Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07924258d56611f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public-webtier-subnet-1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:route-table/rtb-0f83273d1123a3ffe",
            "id": "rtb-0f83273d1123a3ffe",
            "owner_id": "471112601493",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a24d954a26067d50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-test-Public Route Table"
            },
            "tags_all": {
              "Name": "vpc-test-Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07924258d56611f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d53e9dcc4114aeaa",
            "route_table_id": "rtb-07e72bc42f44c879c",
            "subnet_id": "subnet-0269b4f91f141b478"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private-route-table",
            "aws_subnet.private-apptier-subnet-1",
            "aws_subnet.public-webtier-subnet-1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a695fa41d3d74b74",
            "route_table_id": "rtb-0f83273d1123a3ffe",
            "subnet_id": "subnet-0aeb961ee94ac3c5c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.public-webtier-subnet-1",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:security-group/sg-09b1e40a0869807c4",
            "description": "Enable MYSQL access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b1e40a0869807c4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb13556c221c48fe"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database server Security Group",
            "name_prefix": "",
            "owner_id": "471112601493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database Security group"
            },
            "tags_all": {
              "Name": "Database Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07924258d56611f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webserver-security-group",
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:security-group/sg-0c20098cd3e8d9689",
            "description": "Enable ssh access on port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c20098cd3e8d9689",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Access",
            "name_prefix": "",
            "owner_id": "471112601493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH Security group"
            },
            "tags_all": {
              "Name": "SSH Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07924258d56611f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:security-group/sg-0fb13556c221c48fe",
            "description": "Enable direct http/https access on port 80/443 and ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb13556c221c48fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web server Security Group",
            "name_prefix": "",
            "owner_id": "471112601493",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web server Security group"
            },
            "tags_all": {
              "Name": "Web server Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07924258d56611f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-apptier-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:subnet/subnet-0269b4f91f141b478",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0269b4f91f141b478",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112601493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 - App Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 - App Tier"
            },
            "vpc_id": "vpc-07924258d56611f30"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:subnet/subnet-0bc616ccabf51c1dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc616ccabf51c1dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112601493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1 - Db Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 1 - Db Tier"
            },
            "vpc_id": "vpc-07924258d56611f30"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:subnet/subnet-0d50bb509f6e629bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50bb509f6e629bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112601493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2 - Db Tier"
            },
            "tags_all": {
              "Name": "Private Subnet 2 - Db Tier"
            },
            "vpc_id": "vpc-07924258d56611f30"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-webtier-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:subnet/subnet-0aeb961ee94ac3c5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeb961ee94ac3c5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112601493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1 - Web Tier"
            },
            "tags_all": {
              "Name": "Public Subnet 1 - Web Tier"
            },
            "vpc_id": "vpc-07924258d56611f30"
          },
          "dependencies": [
            "aws_vpc.vpc_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112601493:vpc/vpc-07924258d56611f30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06de333341bec2a8b",
            "default_route_table_id": "rtb-0c96ee6c02c8b9de2",
            "default_security_group_id": "sg-00610dd97a9722911",
            "dhcp_options_id": "dopt-09d63285c91d77e96",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07924258d56611f30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c96ee6c02c8b9de2",
            "owner_id": "471112601493",
            "tags": {
              "Name": "vpc-test"
            },
            "tags_all": {
              "Name": "vpc-test"
            }
          }
        }
      ]
    }
  ]
}